--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -95,26 +95,67 @@ button {
     right: 2%;
     top: 2%;
     z-index: 2;
-    > button {
-        @include theme() {
-            color: t($text-color);
-        }
-        -webkit-tap-highlight-color: transparent;
-        transition: all 0.2s;
-        background-color: inherit;
-        border-radius: 50%;
-        padding: 10px;
-        position: relative;
-        right: 0;
-        font-size: 30px;
 
-        &:hover {
-            transform: scale(1.2);
+    * {
+        transition: all 0.2s;
+    }
+
+    > .menu-btn {
+        position: relative;
+        display: inline-block;
+        border-radius: 1000px;
+        padding: 10px;
+        
+        @include theme() {
+            background-color: t($bg-1);
         }
-        &.rotate {
-            transform: rotate(180deg);
+
+        > button {
+            @include theme() {
+                color: t($text-color);
+            }
+            -webkit-tap-highlight-color: transparent;
+            background: none;
+            vertical-align:middle;
+            transition: all 0.2s;
+    
+            &:hover {
+                transform: scale(1.2);
+                & + .tooltip {
+                    right: 100%;
+                    visibility: visible;
+                    opacity: 1;
+                }
+            }
+            &.rotate {
+                transform: rotate(180deg);
+            }
         }
     }
+
+  
+}
+
+.tooltip {
+    @include theme() {
+        background: t($bg-grey);
+        color: t($text-2);
+    }
+    transition: all 0.2s;
+    font-family: "Poppins", sans-serif;
+    font-size: 0.5em;
+    font-weight: 100;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    right: 0%;
+    pointer-events: none;
+    // width: 120px;
+    padding: 10px;
+    border-radius: 6px;
+    line-height: 1em;
+    // pointer-events: none;
 }
 
 .container {
@@ -138,11 +179,14 @@ nav {
     border-radius: $border-rounding;
 
     > button {
+        @include theme() {
+            background: t($bg-grey);
+            color: t($text-2);
+        }
+
         flex: 1;
         transition: right 0.5s, background-color 0.5s;
         position: relative;
-        background-color: rgb(37, 37, 37);
-        color: white;
         padding: 1em;
         font-size: 100%;
         text-align: center;
@@ -290,7 +334,7 @@ section {
         width: auto;
         transition: all 0.5s;
 
-         @media screen and (max-width: $tablet) {
+        @media screen and (max-width: $tablet) {
             display: none;
         }
     }
@@ -309,7 +353,7 @@ section {
 .repo {
     flex: 0 auto;
     min-width: fit-content;
-   
+
     h3 {
         width: 100%;
         display: inline-block;
@@ -362,8 +406,6 @@ section {
             content: "\f35d";
         }
     }
-
-    
 }
 
 .content {
