--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -40,32 +40,34 @@ $tablet: 768px;
         margin-left: 20px;
         vertical-align: middle;
         height: 1em;
-        
+
         animation: progressBar 3s ease-in-out;
-        animation-fill-mode:both; 
+        animation-fill-mode: both;
 
         &::-webkit-progress-bar {
             border-radius: 50px;
             left: 5px;
-            @include theme(){
+            @include theme() {
                 background: t($bg-ag);
             }
         }
 
-        &::-webkit-progress-value  {
-            @include theme(){
+        &::-webkit-progress-value {
+            @include theme() {
                 background: t($bg-3);
             }
             border-radius: 100px;
         }
-
-        
     }
 
     @keyframes progressBar {
-        0% { width: 0; }
-        100% { width: 100%; }
-      }
+        0% {
+            width: 0;
+        }
+        100% {
+            width: 100%;
+        }
+    }
 }
 
 * {
@@ -74,12 +76,27 @@ $tablet: 768px;
     padding: 0;
 }
 
-html,
-body,
-#root {
-    overflow: hidden;
-    min-height: 100%;
+html {
+    height: -webkit-fill-available;
 }
+
+body {
+    height: 100vh;
+    height: -webkit-fill-available;
+    overflow: hidden;
+}
+
+// html,
+// body
+// // #root
+// {
+//     overflow: clip;
+//     min-height: 100%;
+//     // height: 100vh;
+//     // height: calc(var(--vh, 1vh) * 100);
+//     height: 100vh;
+//     height: -webkit-fill-available;
+// }
 
 header {
     position: absolute;
@@ -125,8 +142,9 @@ body.no-anim * {
 }
 
 #root {
+    height: -webkit-fill-available; // fix nav hidden on mobile
     transition: all 0.2s;
-    min-height: 100vh;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
